--- a/ExForca.cbp
+++ b/ExForca.cbp
@@ -31,9 +31,14 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="forca.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="forca.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="palavras.dat" />
 		<Extensions>
 			<code_completion />
 			<envvars />
